--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <header class="header">
       <nav>
         <img src="/images/EnterpriseNGRLogo.png" alt="EnterpriseNGR Logo" />
-        <ul>
+        <ul class="menu-items">
           <li class="drop">
             About Us
             <ul class="dropdown-content">
@@ -26,11 +26,11 @@
           <li>Media and Events</li>
           <li>Contact Us</li>
         </ul>
-      </nav>
 
-      <button class="btn-menu" type="button">
-        <i class="btn-menu__bars" aria-hidden="true"></i>
-      </button>
+        <div class="menu-btn">
+          <div class="menu-btn_burger"></div>
+        </div>
+      </nav>
 
       <div class="landing_page">
         <div class="heading">About</div>
