--- a/about.html
+++ b/about.html
@@ -10,26 +10,29 @@
   <body>
     <header class="header">
       <nav>
-        <img src="/images/EnterpriseNGRLogo.png" alt="EnterpriseNGR Logo" />
-        <ul class="menu-items">
-          <li class="drop">
-            About Us
-            <ul class="dropdown-content">
-              <li><a href="agenda.html">Our Agenda</a></li>
-              <li><a href="">Our Work</a></li>
-              <li><a href="">Leadership</a></li>
-            </ul>
-          </li>
-          <li>Membership</li>
-          <li>Policy & Research</li>
-          <li>Youth of Enterprise</li>
-          <li>Media and Events</li>
-          <li>Contact Us</li>
-        </ul>
-
-        <div class="menu-btn">
-          <div class="menu-btn_burger"></div>
+        <div class="logo">
+          <img src="/images/EnterpriseNGRLogo.png" alt="EnterpriseNGR Logo" />
         </div>
+        <div class="nav-items">
+          <div class="dropdown">
+            <button class="dropbtn">
+              <a href="about.html">About Us</a>
+            </button>
+            <div class="dropdown-content">
+              <a href="agenda.html">Our Agenda</a>
+              <a href="#">Our Work</a>
+              <a href="#">Leadership</a>
+            </div>
+          </div>
+          <a href="agenda.html">Our Agenda</a>
+          <a href="#home">Our Work</a>
+          <a href="#news">Leadership</a>
+          <a href="#news">Policy & Research</a>
+          <a href="#news">Youth of Enterprise</a>
+          <a href="#news">Media and Events</a>
+          <a href="#news">Contact Us</a>
+        </div>
+        <div class="icon">Menu</div>
       </nav>
 
       <div class="landing_page">
