--- a/agenda.html
+++ b/agenda.html
@@ -32,7 +32,15 @@
           <a href="#news">Media and Events</a>
           <a href="#news">Contact Us</a>
         </div>
-        <div class="icon">Menu</div>
+        <div class="icon">
+          <span
+            class="iconify-inline hamburger"
+            data-icon="charm:menu-hamburger"
+            style="color: white"
+            data-width="32"
+            data-height="32"
+          ></span>
+        </div>
       </nav>
 
       <div class="landing_page">
