--- a/agenda.html
+++ b/agenda.html
@@ -5,43 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
     <header class="header">
-      <nav>
+      <div class="Nav-wrapper">
         <div class="logo">
-          <img src="/images/EnterpriseNGRLogo.png" alt="EnterpriseNGR Logo" />
+          <a href="index.html"
+            ><img src="/images/EnterpriseNGRLogo.png" alt=""
+          /></a>
         </div>
-        <div class="nav-items">
-          <div class="dropdown">
-            <button class="dropbtn">
-              <a href="about.html">About Us</a>
-            </button>
-            <div class="dropdown-content">
-              <a href="agenda.html">Our Agenda</a>
-              <a href="#">Our Work</a>
-              <a href="#">Leadership</a>
-            </div>
+        <nav>
+          <input type="checkbox" id="show-search" />
+          <input type="checkbox" id="show-menu" />
+          <label for="show-menu" class="menu-icon"
+            ><i class="fas fa-bars"></i>
+          </label>
+          <div class="content">
+            <ul class="links">
+              <li>
+                <a href="about.html" class="desktop-link">About Us </a>
+                <input type="checkbox" id="show-features" />
+                <label for="show-features">About Us</label>
+                <ul>
+                  <li><a href="agenda.html">Our Agenda</a></li>
+                  <li><a href="#">Our Work</a></li>
+                  <li><a href="#">Leadership</a></li>
+                </ul>
+              </li>
+              <li></li>
+              <li><a href="member.html">Membership</a></li>
+              <li><a href="#">Policy & Research</a></li>
+              <li><a href="#">Youth Of Enterprise</a></li>
+              <li><a href="#">Media & Events</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
           </div>
-          <a href="agenda.html">Our Agenda</a>
-          <a href="#home">Our Work</a>
-          <a href="#news">Leadership</a>
-          <a href="#news">Policy & Research</a>
-          <a href="#news">Youth of Enterprise</a>
-          <a href="#news">Media and Events</a>
-          <a href="#news">Contact Us</a>
-        </div>
-        <div class="icon">
-          <span
-            class="iconify-inline hamburger"
-            data-icon="charm:menu-hamburger"
-            style="color: white"
-            data-width="32"
-            data-height="32"
-          ></span>
-        </div>
-      </nav>
+        </nav>
+      </div>
 
       <div class="landing_page">
         <div class="heading">Our</div>
@@ -288,7 +293,7 @@
       </div>
     </section>
 
-    <section class="agenda_news">
+    <section class="latest_news">
       <div class="news">
         <div class="sm_heading">KEEP UP TO DATE</div>
         <div class="md_heading">Latest News</div>
