--- a/test.html
+++ b/test.html
@@ -15,9 +15,7 @@
     <header class="header">
       <div class="Nav-wrapper">
         <div class="logo">
-          <a href="index.html"
-            ><img src="/images/EnterpriseNGRLogo.png" alt=""
-          /></a>
+          <img src="/images/EnterpriseNGRLogo.png" alt="" />
         </div>
         <nav>
           <input type="checkbox" id="show-search" />
@@ -28,17 +26,17 @@
           <div class="content">
             <ul class="links">
               <li>
-                <a href="about.html" class="desktop-link">About Us </a>
+                <a href="#" class="desktop-link">About Us </a>
                 <input type="checkbox" id="show-features" />
                 <label for="show-features">About Us</label>
                 <ul>
-                  <li><a href="agenda.html">Our Agenda</a></li>
+                  <li><a href="#">Our Agenda</a></li>
                   <li><a href="#">Our Work</a></li>
                   <li><a href="#">Leadership</a></li>
                 </ul>
               </li>
               <li></li>
-              <li><a href="member.html">Membership</a></li>
+              <li><a href="#">Membership</a></li>
               <li><a href="#">Policy & Research</a></li>
               <li><a href="#">Youth Of Enterprise</a></li>
               <li><a href="#">Media & Events</a></li>
