--- a/greenstart.html
+++ b/greenstart.html
@@ -40,9 +40,9 @@
               <li></li>
               <li><a href="member.html">Membership</a></li>
               <li><a href="#">Policy & Research</a></li>
-              <li><a href="#">Youth Of Enterprise</a></li>
+              <li><a href="greenstart.html">Youth Of Enterprise</a></li>
               <li><a href="#">Media & Events</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
         </nav>
@@ -273,13 +273,15 @@
               levels of government.
             </div>
             <button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: black"
-                data-width="26"
-              ></span
-              ><span class="btn_text">Learn More</span>
+              <a href="member.html">
+                <span
+                  class="iconify"
+                  data-icon="bi:arrow-right-circle-fill"
+                  style="color: black"
+                  data-width="26"
+                ></span
+                ><span class="btn_text">Learn More</span>
+              </a>
             </button>
           </div>
           <div class="green">
