--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <li></li>
             <li><a href="member.html">Membership</a></li>
             <li><a href="#">Policy & Research</a></li>
-            <li><a href="#">Youth Of Enterprise</a></li>
+            <li><a href="greenstart.html">Youth Of Enterprise</a></li>
             <li><a href="#">Media & Events</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </div>
       </nav>
