updated header and footer

--- a/greenstart.html
+++ b/greenstart.html
@@ -31,15 +31,10 @@
                 <a href="about.html" class="desktop-link">About Us </a>
                 <input type="checkbox" id="show-features" />
                 <label for="show-features">About Us</label>
-                <ul>
-                  <li><a href="agenda.html">Our Agenda</a></li>
-                  <li><a href="#">Our Work</a></li>
-                  <li><a href="#">Leadership</a></li>
-                </ul>
               </li>
-              <li></li>
+              <li><a href="agenda.html">Our Agenda</a></li>
               <li><a href="member.html">Membership</a></li>
-              <li><a href="#">Policy & Research</a></li>
+              <li><a href="policy.html">Policy & Research</a></li>
               <li><a href="greenstart.html">Youth Of Enterprise</a></li>
               <li><a href="#">Media & Events</a></li>
               <li><a href="contact.html">Contact Us</a></li>
@@ -321,8 +316,43 @@
           <div>News & Events</div>
         </div>
         <div class="column">
-          <div>Contact Us</div>
-          <div>About EnterpriseNGR</div>
+          <div><a href="contact.html">Contact Us</a></div>
+          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div class="social_icons">
+            <div class="item">
+              <a href=""
+                ><span
+                  class="iconify social"
+                  data-icon="akar-icons:facebook-fill"
+                  style="color: #40ba7b"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
+            <div class="item">
+              <a href=""
+                ><span
+                  class="iconify social"
+                  data-icon="akar-icons:twitter-fill"
+                  style="color: #40ba7b"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
+            <div class="item">
+              <a href=""
+                ><span
+                  class="iconify social"
+                  data-icon="akar-icons:instagram-fill"
+                  style="color: #40ba7b"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="privacy_policy">
