--- a/index.html
+++ b/index.html
@@ -33,15 +33,10 @@
               <a href="about.html" class="desktop-link">About Us </a>
               <input type="checkbox" id="show-features" />
               <label for="show-features">About Us</label>
-              <ul>
-                <li><a href="agenda.html">Our Agenda</a></li>
-                <li><a href="#">Our Work</a></li>
-                <li><a href="#">Leadership</a></li>
-              </ul>
             </li>
-            <li></li>
+            <li><a href="agenda.html">Our Agenda</a></li>
             <li><a href="member.html">Membership</a></li>
-            <li><a href="#">Policy & Research</a></li>
+            <li><a href="policy.html">Policy & Research</a></li>
             <li><a href="greenstart.html">Youth Of Enterprise</a></li>
             <li><a href="#">Media & Events</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -331,12 +326,13 @@
 
   <footer>
     <div class="contact_info">
-      <div><img src="/images/EnterpriseNGRLogo.png"></div>
+      <div><img src="/images/EnterpriseNGRLogo.png" /></div>
       <div class="column">
         <div class="phone">+234 812 235 0250</div>
         <div>contact@enterprisengr.com</div>
-        <div>106 1B Abagbon Close, Off Adeola Odeku
-          Victoria Island, Lagos.</div>
+        <div>
+          106 1B Abagbon Close, Off Adeola Odeku Victoria Island, Lagos.
+        </div>
       </div>
       <div class="column">
         <div>Our Interventions</div>
@@ -345,15 +341,49 @@
         <div>News & Events</div>
       </div>
       <div class="column">
-        <div>Contact Us</div>
-        <div>About EnterpriseNGR</div>
+        <div><a href="contact.html">Contact Us</a></div>
+        <div><a href="about.html">About EnterpriseNGR</a></div>
+        <div class="social_icons">
+          <div class="item">
+            <a href=""
+              ><span
+                class="iconify social"
+                data-icon="akar-icons:facebook-fill"
+                style="color: #40ba7b"
+                data-width="35"
+                data-height="35"
+              ></span
+            ></a>
+          </div>
+          <div class="item">
+            <a href=""
+              ><span
+                class="iconify social"
+                data-icon="akar-icons:twitter-fill"
+                style="color: #40ba7b"
+                data-width="35"
+                data-height="35"
+              ></span
+            ></a>
+          </div>
+          <div class="item">
+            <a href=""
+              ><span
+                class="iconify social"
+                data-icon="akar-icons:instagram-fill"
+                style="color: #40ba7b"
+                data-width="35"
+                data-height="35"
+              ></span
+            ></a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="privacy_policy">
       <div>Terms & Conditions - Privacy Policy</div>
       <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
     </div>
-
   </footer>
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   <script src="/js/main.js"></script>
