--- a/policy.html
+++ b/policy.html
@@ -9,8 +9,9 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
-    <title>Contact</title>
+    <title>Our Agenda</title>
   </head>
+
   <body>
     <header class="header">
       <div class="Nav-wrapper">
@@ -43,108 +44,83 @@
         </nav>
       </div>
 
-      <section class="landing_page">
-        <div class="heading">Contact Us</div>
-      </section>
+      <div class="landing_page">
+        <div class="heading">Policy</div>
+        <div class="heading">and</div>
+        <div class="heading">Research.</div>
+      </div>
     </header>
 
-    <section class="contact">
-      <div class="grid">
-        <div class="contact_icons">
-          <div class="contact_icons_item">
-            <span
-              class="iconify social"
-              data-icon="carbon:phone-filled"
-              style="color: #40ba7b"
-              data-width="35"
-              data-height="35"
-            ></span>
-            <span class="icon_item">+234 812 235 0250</span>
-          </div>
-          <div class="contact_icons_item">
-            <span
-              class="iconify social"
-              data-icon="fa6-solid:location-dot"
-              style="color: #40ba7b"
-              data-width="35"
-              data-height="35"
-            ></span
-            ><span class="icon_item address"
-              >106 1B Abagbon Close, Off Adeola Odeku Victoria Island,
-              Lagos.</span
-            >
-          </div>
-          <div class="contact_icons_item">
-            <span
-              class="iconify social"
-              data-icon="clarity:envelope-solid"
-              style="color: #40ba7b"
-              data-width="35"
-              data-height="35"
-            ></span
-            ><span class="icon_item"
-              ><a href="">contact@enterprisengr.com</a>
-            </span>
-          </div>
-          <div class="social_icons">
-            <div class="item">
-              <a href=""
-                ><span
-                  class="iconify social"
-                  data-icon="akar-icons:facebook-fill"
-                  style="color: #40ba7b"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
-            </div>
-            <div class="item">
-              <a href=""
-                ><span
-                  class="iconify social"
-                  data-icon="akar-icons:twitter-fill"
-                  style="color: #40ba7b"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
-            </div>
-            <div class="item">
-              <a href=""
-                ><span
-                  class="iconify social"
-                  data-icon="akar-icons:instagram-fill"
-                  style="color: #40ba7b"
-                  data-width="35"
-                  data-height="35"
-                ></span
-              ></a>
-            </div>
-          </div>
+    <section class="economy">
+      <div class="sm_heading">
+        To position Nigeria as a leading financial centre in Africa and the
+        world.
+      </div>
+      <div class="md_heading">
+        We aim to advance this agenda by actively collaborating with our
+        members, industry partners, and stakeholders.
+      </div>
+
+      <div class="economy_grid">
+        <div class="img">
+          <img src="/images/economy.png" alt="Economy" />
         </div>
 
-        <div class="form">
-          <div class="md_heading">Get In Touch</div>
-          <form action="">
-            <div>
-              <label for="name">Name</label>
-              <input type="text" size="30" />
-            </div>
-
-            <div>
-              <label for="email">E-mail</label>
-              <input type="e-mail" size="30" />
-            </div>
-
-            <div>
-              <label for="message">Send Message</label>
-              <textarea rows="6" cols="30"></textarea>
-            </div>
-
-            <div class="btn">
-              <button>Send Message</button>
-            </div>
-          </form>
+        <div class="economy_description">
+          <div class="bold">
+            We focus our activities on key areas that affect our members and
+            where our cross-sectoral remit allows us to make the greatest
+            impact. These are:
+          </div>
+          <div>
+            <ul>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="bi:arrow-right-circle-fill"
+                  style="color: #40ba7b"
+                  data-width="26"
+                ></span
+                >Financial Inclusion.
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="bi:arrow-right-circle-fill"
+                  style="color: #40ba7b"
+                  data-width="26"
+                ></span
+                >Digitization.
+              </li>
+              <li>
+                <span
+                  class="iconify"
+                  data-icon="bi:arrow-right-circle-fill"
+                  style="color: #40ba7b"
+                  data-width="26"
+                ></span
+                >Regionalization.
+              </li>
+            </ul>
+          </div>
+          <div class="thin">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, autem
+            ab recusandae similique id delectus quas neque ad eius minima! Esse
+            earum incidunt saepe. Cumque, magni qui. Consectetur quasi
+            voluptatum, culpa alias beatae dolore ab minima voluptate obcaecati,
+            repellendus et magni optio recusandae impedit accusantium.
+            Doloribus, officia aliquam amet quo labore quam et sed enim fugiat
+            eius, esse itaque maxime excepturi corrupti quas consectetur
+            pariatur tempore quidem, laudantium repellat. Sunt, dolor debitis
+            enim ratione maiores eveniet expedita atque praesentium quas,
+            mollitia, accusantium cum voluptatibus. Corporis tenetur sequi
+            reiciendis doloribus consectetur modi accusamus voluptatibus quo
+            quia quas nemo officia qui minima, harum sapiente iure placeat
+            consequatur odit pariatur reprehenderit maxime? Dolorem repellendus
+            exercitationem mollitia laudantium reiciendis sint odit porro
+            ducimus pariatur rerum officiis beatae adipisci aut quos dignissimos
+            minima quis, perferendis ipsam tenetur accusamus necessitatibus
+          </div>
         </div>
       </div>
     </section>
@@ -210,6 +186,7 @@
         <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
       </div>
     </footer>
+
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
 </html>
