--- a/policy.html
+++ b/policy.html
@@ -29,9 +29,7 @@
           <div class="content">
             <ul class="links">
               <li>
-                <a href="about.html" class="desktop-link">About Us </a>
-                <input type="checkbox" id="show-features" />
-                <label for="show-features">About Us</label>
+                <a href="about.html">About Us </a>
               </li>
               <li><a href="agenda.html">Our Agenda</a></li>
               <li><a href="member.html">Membership</a></li>
