--- a/about.html
+++ b/about.html
@@ -310,8 +310,8 @@
       </div>
     </section>
 
-    <section class="team">
-      <div class="team_body">
+    <section class="latest_news">
+      <div class="news">
         <div class="news">
           <div class="md_heading">Our Team</div>
           <div class="thin">
