--- a/agenda.html
+++ b/agenda.html
@@ -34,7 +34,7 @@
               <li><a href="member.html">Membership</a></li>
               <li><a href="policy.html">Policy & Research</a></li>
               <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="#">Media & Events</a></li>
+              <li><a href="news.html">Media & Events</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -125,16 +125,18 @@
             growth of the Nigerian FPS sector and positioning it as a leading
             financial centre in Africa and the world.
           </div>
-          <button class="big_btn">
-            <span
-              class="iconify-inline"
-              data-icon="bi:arrow-right-circle"
-              style="color: #40ba7b"
-              data-width="29"
-              data-height="29"
-            ></span>
-            <span class="btn_text">More About Us</span>
-          </button>
+          <a href="about.html">
+            <button class="big_btn">
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span>
+              <span class="btn_text">More About Us</span>
+            </button></a
+          >
         </div>
       </div>
     </section>
@@ -200,15 +202,17 @@
             Join our network of members at the forefront of advancing the
             development and transformation of Nigeria.
           </div>
-          <button class="md_btn">
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            ><span class="btn_text">Learn More</span>
-          </button>
+          <a href="member.html"
+            ><button class="md_btn">
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              ><span class="btn_text">Learn More</span>
+            </button></a
+          >
         </div>
       </div>
     </section>
@@ -301,15 +305,17 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: black"
-                  data-width="26"
-                ></span>
-                <span class="btn_text">Read More</span>
-              </button>
+              <a href="news.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
             </div>
           </div>
           <div class="card">
@@ -319,15 +325,17 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: black"
-                  data-width="26"
-                ></span>
-                <span class="btn_text">Read More</span>
-              </button>
+              <a href="news.html"
+                ><button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
             </div>
           </div>
           <div class="card">
@@ -337,15 +345,17 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: black"
-                  data-width="26"
-                ></span>
-                <span class="btn_text">Read More</span>
-              </button>
+              <a href="news.html"
+                ><button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
             </div>
           </div>
           <div class="card">
@@ -355,15 +365,17 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: black"
-                  data-width="26"
-                ></span>
-                <span class="btn_text">Read More</span>
-              </button>
+              <a href="news.html">
+                <button class="md_btn">
+                  <span
+                    class="iconify"
+                    data-icon="bi:arrow-right-circle-fill"
+                    style="color: black"
+                    data-width="26"
+                  ></span>
+                  <span class="btn_text">Read More</span>
+                </button></a
+              >
             </div>
           </div>
         </div>
@@ -380,15 +392,17 @@
             globally and in Nigeria) as well as policymakers at all levels of
             government.
           </div>
-          <button class="md_btn">
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: black"
-              data-width="26"
-            ></span
-            ><span class="btn_text">Learn More</span>
-          </button>
+          <a href="greenstart.html"
+            ><button class="md_btn">
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: black"
+                data-width="26"
+              ></span
+              ><span class="btn_text">Learn More</span>
+            </button></a
+          >
         </div>
         <div class="green">
           <div>JOIN NOW</div>
