--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
               <li><a href="member.html">Membership</a></li>
               <li><a href="policy.html">Policy & Research</a></li>
               <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="#">Media & Events</a></li>
+              <li><a href="news.html">Media & Events</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
