--- a/member.html
+++ b/member.html
@@ -72,16 +72,18 @@
             requires an enabling policy environment and collaborative
             transformational growth effort.
           </div>
-          <button class="big_btn">
-            <span
-              class="iconify-inline"
-              data-icon="bi:arrow-right-circle"
-              style="color: #40ba7b"
-              data-width="29"
-              data-height="29"
-            ></span>
-            <span class="btn_text">Learn More</span>
-          </button>
+          <a href="about.html"
+            ><button class="big_btn">
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span>
+              <span class="btn_text">Learn More</span>
+            </button></a
+          >
         </div>
       </div>
     </section>
@@ -109,15 +111,17 @@
         </div>
         <div>
           <div>
-            <button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: black"
-                data-width="26"
-              ></span>
-              <span class="btn_text">Read More</span>
-            </button>
+            <a href="news.html"
+              ><button class="md_btn">
+                <span
+                  class="iconify"
+                  data-icon="bi:arrow-right-circle-fill"
+                  style="color: black"
+                  data-width="26"
+                ></span>
+                <span class="btn_text">Read More</span>
+              </button></a
+            >
           </div>
           <div class="img">
             <img src="/images/economy.png" alt="" />
@@ -214,16 +218,18 @@
           </li>
         </ul>
       </div>
-      <button class="big_btn">
-        <span
-          class="iconify-inline"
-          data-icon="bi:arrow-right-circle"
-          style="color: #40ba7b"
-          data-width="29"
-          data-height="29"
-        ></span>
-        <span class="btn_text">Join Us</span>
-      </button>
+      <a href="enterprisengr.roundstone.solutions/login">
+        <button class="big_btn">
+          <span
+            class="iconify-inline"
+            data-icon="bi:arrow-right-circle"
+            style="color: #40ba7b"
+            data-width="29"
+            data-height="29"
+          ></span>
+          <span class="btn_text">Join Us</span>
+        </button></a
+      >
     </section>
 
     <section class="founding_members">
@@ -284,15 +290,17 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button>
+                <a href="news.html"
+                  ><button class="md_btn">
+                    <span
+                      class="iconify"
+                      data-icon="bi:arrow-right-circle-fill"
+                      style="color: black"
+                      data-width="26"
+                    ></span>
+                    <span class="btn_text">Read More</span>
+                  </button></a
+                >
               </div>
             </div>
             <div class="card">
@@ -302,15 +310,17 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button>
+                <a href="news.html"
+                  ><button class="md_btn">
+                    <span
+                      class="iconify"
+                      data-icon="bi:arrow-right-circle-fill"
+                      style="color: black"
+                      data-width="26"
+                    ></span>
+                    <span class="btn_text">Read More</span>
+                  </button></a
+                >
               </div>
             </div>
             <div class="card">
@@ -320,15 +330,17 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button>
+                <a href="news.html"
+                  ><button class="md_btn">
+                    <span
+                      class="iconify"
+                      data-icon="bi:arrow-right-circle-fill"
+                      style="color: black"
+                      data-width="26"
+                    ></span>
+                    <span class="btn_text">Read More</span>
+                  </button></a
+                >
               </div>
             </div>
             <div class="card">
@@ -338,15 +350,17 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <button class="md_btn">
-                  <span
-                    class="iconify"
-                    data-icon="bi:arrow-right-circle-fill"
-                    style="color: black"
-                    data-width="26"
-                  ></span>
-                  <span class="btn_text">Read More</span>
-                </button>
+                <a href="news.html"
+                  ><button class="md_btn">
+                    <span
+                      class="iconify"
+                      data-icon="bi:arrow-right-circle-fill"
+                      style="color: black"
+                      data-width="26"
+                    ></span>
+                    <span class="btn_text">Read More</span>
+                  </button></a
+                >
               </div>
             </div>
           </div>
@@ -363,15 +377,17 @@
               (both globally and in Nigeria) as well as policymakers at all
               levels of government.
             </div>
-            <button class="md_btn">
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: black"
-                data-width="26"
-              ></span
-              ><span class="btn_text">Learn More</span>
-            </button>
+            <a href="greenstart.html">
+              <button class="md_btn">
+                <span
+                  class="iconify"
+                  data-icon="bi:arrow-right-circle-fill"
+                  style="color: black"
+                  data-width="26"
+                ></span
+                ><span class="btn_text">Learn More</span>
+              </button></a
+            >
           </div>
           <div class="green">
             <div>JOIN NOW</div>
