--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
               <li><a href="member.html">Membership</a></li>
               <li><a href="policy.html">Policy & Research</a></li>
               <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="#">Media & Events</a></li>
+              <li><a href="news.html">Media & Events</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -89,16 +89,18 @@
             <br />
             <p>This is where EnterpriseNGR comes in.</p>
           </div>
-          <button class="big_btn">
-            <span
-              class="iconify-inline"
-              data-icon="bi:arrow-right-circle"
-              style="color: #40ba7b"
-              data-width="29"
-              data-height="29"
-            ></span>
-            <span class="btn_text">Learn More</span>
-          </button>
+          <a href="about.html"
+            ><button class="big_btn">
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span>
+              <span class="btn_text">Learn More</span>
+            </button></a
+          >
         </div>
       </div>
     </section>
@@ -378,15 +380,17 @@
           globally and in Nigeria) as well as policymakers at all levels of
           government.
         </div>
-        <button class="md_btn">
-          <span
-            class="iconify"
-            data-icon="bi:arrow-right-circle-fill"
-            style="color: black"
-            data-width="26"
-          ></span
-          ><span class="btn_text">Learn More</span>
-        </button>
+        <a href="greenstart.html"
+          ><button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: black"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Learn More</span>
+          </button></a
+        >
       </div>
       <div class="green">
         <div>JOIN NOW</div>
@@ -414,15 +418,17 @@
             Join our network of members at the forefront of advancing the
             development and transformation of Nigeria.
           </div>
-          <button class="md_btn">
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            ><span class="btn_text">Learn More</span>
-          </button>
+          <a href="member.html">
+            <button class="md_btn">
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              ><span class="btn_text">Learn More</span>
+            </button></a
+          >
         </div>
       </div>
     </section>
