--- a/about.html
+++ b/about.html
@@ -456,9 +456,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:facebook-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:facebook-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -467,9 +467,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:twitter-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:instagram-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -478,9 +478,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:instagram-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="ant-design:twitter-circle-filled"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
