--- a/agenda.html
+++ b/agenda.html
@@ -446,9 +446,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:facebook-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:facebook-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -457,9 +457,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:twitter-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:instagram-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -468,9 +468,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:instagram-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="ant-design:twitter-circle-filled"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
