--- a/policy.html
+++ b/policy.html
@@ -146,9 +146,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:facebook-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:facebook-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -157,9 +157,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:twitter-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:instagram-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -168,9 +168,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:instagram-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="ant-design:twitter-circle-filled"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
