--- a/contact.html
+++ b/contact.html
@@ -170,9 +170,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:facebook-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:facebook-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -181,9 +181,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:twitter-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="entypo-social:instagram-with-circle"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
@@ -192,9 +192,9 @@
             <div class="item">
               <a href=""
                 ><span
-                  class="iconify social"
-                  data-icon="akar-icons:instagram-fill"
-                  style="color: #40ba7b"
+                  class="iconify"
+                  data-icon="ant-design:twitter-circle-filled"
+                  style="color: #00a855"
                   data-width="35"
                   data-height="35"
                 ></span
