--- a/news.html
+++ b/news.html
@@ -91,6 +91,67 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="contact_info">
+        <div><img src="/images/EnterpriseNGRLogo.png" /></div>
+        <div class="column">
+          <div class="phone">+234 812 235 0250</div>
+          <div>contact@enterprisengr.com</div>
+          <div>
+            106 1B Abagbon Close, Off Adeola Odeku Victoria Island, Lagos.
+          </div>
+        </div>
+        <div class="column">
+          <div>Our Interventions</div>
+          <div>Membership</div>
+          <div>Policy & Research</div>
+          <div>News & Events</div>
+        </div>
+        <div class="column">
+          <div><a href="contact.html">Contact Us</a></div>
+          <div><a href="about.html">About EnterpriseNGR</a></div>
+          <div class="social_icons">
+            <div class="item">
+              <a href=""
+                ><span
+                  class="iconify"
+                  data-icon="entypo-social:facebook-with-circle"
+                  style="color: #00a855"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
+            <div class="item">
+              <a href=""
+                ><span
+                  class="iconify"
+                  data-icon="entypo-social:instagram-with-circle"
+                  style="color: #00a855"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
+            <div class="item">
+              <a href=""
+                ><span
+                  class="iconify"
+                  data-icon="ant-design:twitter-circle-filled"
+                  style="color: #00a855"
+                  data-width="35"
+                  data-height="35"
+                ></span
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="privacy_policy">
+        <div>Terms & Conditions - Privacy Policy</div>
+        <div>© 2022 EnterpriseNGR - All Rights Reserved</div>
+      </div>
+    </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
   </body>
 </html>
