--- a/agenda.html
+++ b/agenda.html
@@ -305,7 +305,7 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <a href="news.html">
+              <a href="newsitem.html">
                 <button class="md_btn">
                   <span
                     class="iconify"
@@ -325,7 +325,7 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <a href="news.html"
+              <a href="newsitem.html"
                 ><button class="md_btn">
                   <span
                     class="iconify"
@@ -345,7 +345,7 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <a href="news.html"
+              <a href="newsitem.html"
                 ><button class="md_btn">
                   <span
                     class="iconify"
@@ -365,7 +365,7 @@
             <div class="sm_heading text">19 May 2022</div>
             <div class="bold text">New Report: 2022 State of Enterprise</div>
             <div class="text">
-              <a href="news.html">
+              <a href="newsitem.html">
                 <button class="md_btn">
                   <span
                     class="iconify"
