--- a/member.html
+++ b/member.html
@@ -34,7 +34,7 @@
               <li><a href="member.html">Membership</a></li>
               <li><a href="policy.html">Policy & Research</a></li>
               <li><a href="greenstart.html">Youth Of Enterprise</a></li>
-              <li><a href="#">Media & Events</a></li>
+              <li><a href="news.html">Media & Events</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -218,7 +218,7 @@
           </li>
         </ul>
       </div>
-      <a href="enterprisengr.roundstone.solutions/login">
+      <a href="http://enterprisengr.roundstone.solutions/login">
         <button class="big_btn">
           <span
             class="iconify-inline"
@@ -290,7 +290,7 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <a href="news.html"
+                <a href="newsitem.html"
                   ><button class="md_btn">
                     <span
                       class="iconify"
@@ -310,7 +310,7 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <a href="news.html"
+                <a href="newsitem.html"
                   ><button class="md_btn">
                     <span
                       class="iconify"
@@ -330,7 +330,7 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <a href="news.html"
+                <a href="newsitem.html"
                   ><button class="md_btn">
                     <span
                       class="iconify"
@@ -350,7 +350,7 @@
               <div class="sm_heading text">19 May 2022</div>
               <div class="bold text">New Report: 2022 State of Enterprise</div>
               <div class="text">
-                <a href="news.html"
+                <a href="newsitem.html"
                   ><button class="md_btn">
                     <span
                       class="iconify"
