--- a/newsitem.html
+++ b/newsitem.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header news">
       <div class="Nav-wrapper">
         <div class="logo">
           <a href="index.html"
@@ -36,12 +40,7 @@
           </div>
         </nav>
       </div>
-
-      <section class="landing_page">
-        <div class="heading">Media and Events</div>
-      </section>
     </header>
-
     <section class="media_events news">
       <div class="grid">
         <div class="grid_item">
@@ -147,6 +146,7 @@
         </div>
       </div>
     </section>
+
     <footer>
       <div class="contact_info">
         <div><img src="/images/EnterpriseNGRLogo.png" /></div>
