--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             data-height="29"></span>
           <span class="btn_text">More About Us</span>
         </button></a>
-        <a href="about.html"><button class="btn_work">Our Work</button></a>
+        <a href="#our-work"><button class="btn_work">Our Work</button></a>
         
       </div>
     </div>
@@ -131,7 +131,7 @@
           <div class="sm_heading text">19 May 2022</div>
           <div class="bold text">New Report: 2022 State of Enterprise</div>
           <div class="text">
-            <a href="news.html"><button class="md_btn">
+            <a href="newsitem.html"><button class="md_btn">
               <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
               <span class="btn_text">Read More</span>
             </button></a>
@@ -145,7 +145,7 @@
           <div class="sm_heading text">19 May 2022</div>
           <div class="bold text">New Report: 2022 State of Enterprise</div>
           <div class="text">
-            <a href="news.html"><button class="md_btn">
+            <a href="newsitem.html"><button class="md_btn">
               <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
               <span class="btn_text">Read More</span>
             </button></a>
@@ -159,7 +159,7 @@
           <div class="sm_heading text">19 May 2022</div>
           <div class="bold text">New Report: 2022 State of Enterprise</div>
           <div class="text">
-            <a href="news.html"><button class="md_btn">
+            <a href="newsitem.html"><button class="md_btn">
               <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
               <span class="btn_text">Read More</span>
             </button></a>
@@ -173,7 +173,7 @@
           <div class="sm_heading text">19 May 2022</div>
           <div class="bold text">New Report: 2022 State of Enterprise</div>
           <div class="text">
-            <a href="news.html"><button class="md_btn">
+            <a href="newsitem.html"><button class="md_btn">
               <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;" data-width="26"></span>
               <span class="btn_text">Read More</span>
             </button></a>
@@ -209,7 +209,7 @@
           <button class="btn">FINANCIAL SERVICES</button>
         </div>
         <div>
-          <a href="news.html"><button class="md_btn">
+          <a href="newsitem.html"><button class="md_btn">
             <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
               data-width="26"></span><span class="btn_text">Read More</span>
           </button></a>
@@ -224,7 +224,7 @@
           <button class="btn">FINANCIAL SERVICES</button>
         </div>
         <div>
-          <a href="news.html"><button class="md_btn">
+          <a href="newsitem.html"><button class="md_btn">
             <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
               data-width="26"></span><span class="btn_text">Read More</span>
           </button></a>
@@ -239,7 +239,7 @@
           <button class="btn">FINANCIAL SERVICES</button>
         </div>
         <div>
-          <a href="news.html"><button class="md_btn">
+          <a href="newsitem.html"><button class="md_btn">
             <span class="iconify" data-icon="bi:arrow-right-circle-fill" style="color: black;"
               data-width="26"></span><span class="btn_text">Read More</span>
           </button></a>
@@ -276,7 +276,7 @@
     </div>
   </section>
 
-  <section class="our_work">
+  <section id="our-work" class="our_work">
     <div class="sm_heading">Our Work</div>
     <div class="md_heading">EnterpriseNGR Initiatives</div>
     <div class="cards">
